tests/errors/unclosed-comment.wit
~~ this block comment is never closed and runs to EOF
still inside the comment
